# claude-usage-monitor

./: .gitignore  README.md  WORKPLAN.md  claude_monitor.spec  pyproject.toml
extension/: background.js  generate_icons.py  manifest.json  popup.css  popup.html  popup.js
src/claude_usage_monitor/: __init__.py  __main__.py  analyzer.py  claude_code_reader.py  config.py  database.py  main.py  scraper.py  server.py
src/claude_usage_monitor/static/: app.js  dashboard.html  index.html  modules.js
src/claude_usage_monitor/static/modules/: claude-code.html  cycles.html  history.html  overview.html  plans.html  settings.html
