[project]
name = "claude-usage-monitor"
version = "2.0.0"
description = "Surveille ta consommation Claude et recommande le plan optimal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Serge" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "playwright>=1.49.0",
    "pystray>=0.19.0",
    "Pillow>=11.0.0",
    "python-multipart>=0.0.18",
]

[project.scripts]
claude-monitor = "claude_usage_monitor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_usage_monitor"]

[tool.hatch.build.targets.wheel.force-include]
"src/claude_usage_monitor/static" = "claude_usage_monitor/static"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
